--- a/statistical analysis/ARIMA  (unemployment).ipynb
+++ b/statistical analysis/ARIMA  (unemployment).ipynb
@@ -30,16 +30,18 @@
    "outputs": [],
    "source": [
     "# Import packages\n",
-    "import gdown\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
+    "import gdown\n",
+    "import requests\n",
+    "import warnings\n",
+    "from io import StringIO\n",
+    "\n",
     "import scipy.stats as stats\n",
     "from statsmodels.tsa.stattools import adfuller\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
-    "\n",
-    "import warnings\n",
     "import itertools\n",
     "from statsmodels.tsa.arima.model import ARIMA\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
@@ -69,16 +71,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading...\n",
-      "From: https://drive.google.com/uc?export=download&id=1RpF3UtvdnvwGilvP5KjQ2tA-hHDNKsnc\n",
-      "To: d:\\OneDrive (Personal)\\OneDrive\\~ TMU 2023\\CIND 860 - Adv. Data Analytics Project\\time-series-forecast\\statistical analysis\\cleaned_data.csv\n",
-      "100%|██████████| 61.2M/61.2M [00:04<00:00, 12.5MB/s]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -101,18 +93,19 @@
     }
    ],
    "source": [
-    "# Google Drive file \n",
+    "# Google Drive file\n",
     "file_id = '1RpF3UtvdnvwGilvP5KjQ2tA-hHDNKsnc'\n",
     "\n",
     "# Create the download URL\n",
     "download_url = f'https://drive.google.com/uc?export=download&id={file_id}'\n",
     "\n",
-    "# Download the file \n",
-    "output_path = 'cleaned_data.csv'\n",
-    "gdown.download(download_url, output_path, quiet=False)\n",
+    "# Use requests to get file content\n",
+    "response = requests.get(download_url)\n",
+    "response.raise_for_status()  \n",
     "\n",
-    "# Load the CSV \n",
-    "df = pd.read_csv(output_path)\n",
+    "# Load the CSV directly into df\n",
+    "csv_data = StringIO(response.text)\n",
+    "df = pd.read_csv(csv_data)\n",
     "\n",
     "# Display data\n",
     "print('Shape of the dataset:', df.shape)\n",
@@ -617,7 +610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**AR** - Autoregressive\n",
+    "**Autoregressive** **(AR)**\n",
     "\n",
     "ACF Plot - lag 1 is significant (> *p* = .05)\n",
     "\n",
@@ -625,9 +618,8 @@
     "\n",
     "*p* = 1\n",
     "\n",
-    "<br>\n",
     "\n",
-    "**I** - Integrated\n",
+    "**Integrated** **(I)**\n",
     "\n",
     "ADF Test - data is stationary\n",
     "\n",
@@ -635,9 +627,8 @@
     "\n",
     "*d* = 0\n",
     "\n",
-    "<br>\n",
     "\n",
-    "**MA** - Moving Average\n",
+    "**Moving Average** **(MA)**\n",
     "\n",
     "AIC/BIC = 0\n",
     "\n",
@@ -646,6 +637,7 @@
     "---\n",
     "\n",
     "**Model Results**\n",
+    "\n",
     "ARIMA(1,0,0)"
    ]
   },
@@ -719,7 +711,7 @@
       "Dep. Variable:     median_unemployment   No. Observations:                  288\n",
       "Model:                  ARIMA(1, 0, 0)   Log Likelihood                -450.804\n",
       "Date:                 Wed, 13 Nov 2024   AIC                            907.608\n",
-      "Time:                         23:41:26   BIC                            918.597\n",
+      "Time:                         23:55:27   BIC                            918.597\n",
       "Sample:                     01-01-1997   HQIC                           912.011\n",
       "                          - 12-01-2020                                         \n",
       "Covariance Type:                   opg                                         \n",
