Update ARIMA  (unemployment).ipynb

--- a/statistical analysis/ARIMA  (unemployment).ipynb
+++ b/statistical analysis/ARIMA  (unemployment).ipynb
@@ -438,7 +438,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ADF test results indicate that the data is stationary. Although the ACF plot shows some notable spikes from lags 1 to 4, the correlations gradually decline thereafter with only a few other prominent lags. The PACF shows a strong spike at lag 1 followed by less prominent lags, indicating a possible AR(1) model. After considering these factors and the descriptive statistics (*M* = 9.39, *SD* = 1.59, range = 6.74-18.81), the variance was determined to not be instable enough to necessitate a log transformation. "
+    "The ADF test results indicate that the data is stationary. Although the ACF plot shows some notable spikes from lags 1 to 4, the correlations gradually decline thereafter with only a few other prominent lags. The PACF shows a strong spike at lag 1 followed by less prominent lags, indicating a possible AR(1) model. After considering these factors and the descriptive statistics (*M* = 9.39, *SD* = 1.59, range = 6.74-18.81), the variance was determined to not be instable enough to necessitate a log transformation. \n",
+    "\n",
+    "However, due to the noticeable trends presented with the Autocorrelation Function (ACF), further analysis will be conducted with a SARIMA model. "
    ]
   },
   {
