Update ARIMA  (unemployment).ipynb

--- a/statistical analysis/ARIMA  (unemployment).ipynb
+++ b/statistical analysis/ARIMA  (unemployment).ipynb
@@ -431,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Stationarity Conclusion**"
+    "## *Stationarity Conclusion*"
    ]
   },
   {
@@ -448,6 +448,13 @@
    "metadata": {},
    "source": [
     "# ARIMA Parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parameter Testing"
    ]
   },
   {
@@ -757,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -775,19 +782,15 @@
     "# Define procedure\n",
     "tscv = TimeSeriesSplit(n_splits=5)\n",
     "\n",
-    "# Assign training data\n",
-    "train_series = train['median_unemployment']\n",
-    "train_series.index = train_series.index.to_period('M').to_timestamp()\n",
-    "\n",
     "# Cross-validation\n",
     "cv_mse_scores = []\n",
     "cv_rmse_scores = []\n",
     "cv_mae_scores = []\n",
     "cv_mape_scores = []\n",
     "\n",
-    "for train_index, val_index in tscv.split(train_series):\n",
+    "for train_index, val_index in tscv.split(train):\n",
     "    # Split into train and validation sets \n",
-    "    train_cv, val_cv = train_series.iloc[train_index], train_series.iloc[val_index]\n",
+    "    train_cv, val_cv = train.iloc[train_index], train.iloc[val_index]\n",
     "\n",
     "    # Fit the ARIMA model (d=0 -> data is stationary)\n",
     "    model = ARIMA(train_cv, order=(1, 0, 0))\n",
@@ -833,6 +836,13 @@
     "print('Cross-Validation Root Mean Squared Error (RMSE):', np.mean(cv_rmse_scores))\n",
     "print('Cross-Validation Mean Absolute Error (MAE):', np.mean(cv_mae_scores))\n",
     "print('Cross-Validation Mean Absolute Percentage Error (MAPE):', np.nanmean(cv_mape_scores))  # Use np.nanmean to ignore NaNs\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Forecast"
    ]
   },
   {
@@ -901,6 +911,13 @@
     "plt.legend()\n",
     "plt.tight_layout()  \n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Evaluation"
    ]
   },
   {
