--- a/statistical analysis/ARIMA  (unemployment).ipynb
+++ b/statistical analysis/ARIMA  (unemployment).ipynb
@@ -719,8 +719,8 @@
       "===============================================================================\n",
       "Dep. Variable:     median_unemployment   No. Observations:                  288\n",
       "Model:                  ARIMA(1, 0, 0)   Log Likelihood                -450.804\n",
-      "Date:                 Wed, 13 Nov 2024   AIC                            907.608\n",
-      "Time:                         23:55:27   BIC                            918.597\n",
+      "Date:                 Sat, 16 Nov 2024   AIC                            907.608\n",
+      "Time:                         23:53:10   BIC                            918.597\n",
       "Sample:                     01-01-1997   HQIC                           912.011\n",
       "                          - 12-01-2020                                         \n",
       "Covariance Type:                   opg                                         \n",
@@ -764,17 +764,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross-Validation Mean Squared Error (MSE): 2.8278541443118694\n",
-      "Cross-Validation Root Mean Squared Error (RMSE): 1.5932920315785126\n",
-      "Cross-Validation Mean Absolute Error (MAE): 1.251120853614237\n",
-      "Cross-Validation Mean Absolute Percentage Error (MAPE): 13.595790099671774\n"
+     "ename": "IndexError",
+     "evalue": "too many indices for array: array is 1-dimensional, but 2 were indexed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 43\u001b[0m\n\u001b[0;32m     41\u001b[0m valid_indices \u001b[38;5;241m=\u001b[39m val_cv_np \u001b[38;5;241m>\u001b[39m epsilon\n\u001b[0;32m     42\u001b[0m filtered_val_cv \u001b[38;5;241m=\u001b[39m val_cv_np[valid_indices]\n\u001b[1;32m---> 43\u001b[0m filtered_forecast \u001b[38;5;241m=\u001b[39m forecast_np[valid_indices]\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(filtered_val_cv) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     46\u001b[0m     \u001b[38;5;66;03m# MAPE calculation\u001b[39;00m\n\u001b[0;32m     47\u001b[0m     mape \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmean(np\u001b[38;5;241m.\u001b[39mabs((filtered_val_cv \u001b[38;5;241m-\u001b[39m filtered_forecast) \u001b[38;5;241m/\u001b[39m (filtered_val_cv \u001b[38;5;241m+\u001b[39m epsilon))) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n",
+      "\u001b[1;31mIndexError\u001b[0m: too many indices for array: array is 1-dimensional, but 2 were indexed"
      ]
     }
    ],
@@ -847,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
