--- a/statistical analysis/SARIMA/SARIMA - Unemployment.ipynb
+++ b/statistical analysis/SARIMA/SARIMA - Unemployment.ipynb
@@ -25,17 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import libraries\n",
-    "from statsmodels.tsa.seasonal import seasonal_decompose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +44,7 @@
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
     "import itertools\n",
     "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
+    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error"
    ]
@@ -458,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1475,7 @@
       "Dep. Variable:                     median_unemployment   No. Observations:                  288\n",
       "Model:             SARIMAX(1, 0, 0)x(0, 1, [1, 2], 12)   Log Likelihood                -336.607\n",
       "Date:                                 Mon, 18 Nov 2024   AIC                            681.214\n",
-      "Time:                                         21:32:12   BIC                            695.316\n",
+      "Time:                                         21:53:02   BIC                            695.316\n",
       "Sample:                                     01-01-1997   HQIC                           686.889\n",
       "                                          - 12-01-2020                                         \n",
       "Covariance Type:                                   opg                                         \n",
@@ -1535,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
