--- a/statistical analysis/SARIMA/SARIMA - Unemployment.ipynb
+++ b/statistical analysis/SARIMA/SARIMA - Unemployment.ipynb
@@ -1796,7 +1796,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AIC Model "
+    "## AIC Model Statistics"
    ]
   },
   {
@@ -1814,196 +1814,6 @@
     "Mean Absolute Error (MAE): 0.9122845975858738\n",
     "\n",
     "Mean Absolute Percentage Error (MAPE): 10.203515983115949\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## SARIMA Model (AIC) Code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Fit Model\n",
-    "\n",
-    "```\n",
-    "### Define SARIMA parameters\n",
-    "p, d, q = 1, 0, 1  # Non-seasonal parameters\n",
-    "P, D, Q, m = 0, 1, 2, 12  # Seasonal parameters (e.g., m = 12 for monthly data)\n",
-    "\n",
-    "### Fit the SARIMA model\n",
-    "model = SARIMAX(train, \n",
-    "                order=(p, d, q), \n",
-    "                seasonal_order=(P, D, Q, m), \n",
-    "                enforce_stationarity=False, \n",
-    "                enforce_invertibility=False)\n",
-    "\n",
-    "### Train the model\n",
-    "results = model.fit()\n",
-    "\n",
-    "### Print model summary\n",
-    "print(results.summary())\n",
-    "```\n",
-    "\n",
-    "### Cross Validation\n",
-    "```\n",
-    "# Define time series split\n",
-    "tscv = TimeSeriesSplit(n_splits=5)\n",
-    "\n",
-    "# Initialize lists for evaluation metrics\n",
-    "cv_mse_scores = []\n",
-    "cv_rmse_scores = []\n",
-    "cv_mae_scores = []\n",
-    "cv_mape_scores = []\n",
-    "\n",
-    "# Perform cross-validation\n",
-    "for train_index, val_index in tscv.split(train):\n",
-    "    # Split into train and validation sets\n",
-    "    train_cv, val_cv = train.iloc[train_index], train.iloc[val_index]\n",
-    "\n",
-    "    # Fit the SARIMA model\n",
-    "    model = SARIMAX(\n",
-    "        train_cv, order=(1, 0, 1), \n",
-    "        seasonal_order=(0, 1, 2, 12), \n",
-    "        enforce_stationarity=False, \n",
-    "        enforce_invertibility=False\n",
-    "    )\n",
-    "    model_fit = model.fit(disp=False)\n",
-    "\n",
-    "    # Forecast for the length of the validation set\n",
-    "    forecast = model_fit.forecast(steps=len(val_cv))\n",
-    "    \n",
-    "    # Align forecast index with validation set\n",
-    "    forecast.index = val_cv.index  # Ensure indices match for proper alignment\n",
-    "\n",
-    "    # Convert validation and forecast to numpy arrays (numerical values only)\n",
-    "    val_cv_np = val_cv['median_unemployment'].values\n",
-    "    forecast_np = forecast.values\n",
-    "\n",
-    "    # Calculate Mean Squared Error (MSE)\n",
-    "    mse = mean_squared_error(val_cv_np, forecast_np)\n",
-    "    cv_mse_scores.append(mse)\n",
-    "\n",
-    "    # Calculate Root Mean Squared Error (RMSE)\n",
-    "    rmse = np.sqrt(mse)\n",
-    "    cv_rmse_scores.append(rmse)\n",
-    "\n",
-    "    # Calculate Mean Absolute Error (MAE)\n",
-    "    mae = mean_absolute_error(val_cv_np, forecast_np)\n",
-    "    cv_mae_scores.append(mae)\n",
-    "\n",
-    "    # Calculate Mean Absolute Percentage Error (MAPE)\n",
-    "    epsilon = 1e-10\n",
-    "\n",
-    "    # Filter out zero or near-zero values\n",
-    "    valid_indices = val_cv_np > epsilon  # Boolean mask\n",
-    "    filtered_val_cv = val_cv_np[valid_indices]  # Filter validation values\n",
-    "    filtered_forecast = forecast_np[valid_indices]  # Filter forecast values\n",
-    "\n",
-    "    if len(filtered_val_cv) > 0:\n",
-    "        # MAPE calculation\n",
-    "        mape = np.mean(np.abs((filtered_val_cv - filtered_forecast) / (filtered_val_cv + epsilon))) * 100\n",
-    "    else:\n",
-    "        mape = np.nan  # If no valid values, set as NaN\n",
-    "\n",
-    "    cv_mape_scores.append(mape)\n",
-    "\n",
-    "# Cross-validation scores\n",
-    "print('Cross-Validation Mean Squared Error (MSE):', np.mean(cv_mse_scores))\n",
-    "print('Cross-Validation Root Mean Squared Error (RMSE):', np.mean(cv_rmse_scores))\n",
-    "print('Cross-Validation Mean Absolute Error (MAE):', np.mean(cv_mae_scores))\n",
-    "print('Cross-Validation Mean Absolute Percentage Error (MAPE):', np.nanmean(cv_mape_scores))  # Use np.nanmean to ignore NaNs\n",
-    "```\n",
-    "\n",
-    "### Model Forecast\n",
-    "```\n",
-    "# Define SARIMA model with seasonal order\n",
-    "model = SARIMAX(train, \n",
-    "                order=(p, d, q),  # Non-seasonal parameters\n",
-    "                seasonal_order=(P, D, Q, m),  # Seasonal parameters\n",
-    "                enforce_stationarity=False, \n",
-    "                enforce_invertibility=False)\n",
-    "\n",
-    "# Fit the model\n",
-    "model_fit = model.fit()\n",
-    "\n",
-    "# Forecast using the fitted SARIMA model\n",
-    "forecast = model_fit.forecast(steps=len(test))\n",
-    "\n",
-    "# Print forecast\n",
-    "print(forecast.head())\n",
-    "\n",
-    "# Align the forecast index to match the test index\n",
-    "forecast.index = test.index  \n",
-    "\n",
-    "# Add forecast to the test data for comparison\n",
-    "test = test.copy()\n",
-    "test['Predicted'] = forecast\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Plot actual vs predicted values\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.plot(train.index, train, label='Training Data', color='blue', linewidth=1.5)\n",
-    "plt.plot(test.index, test, label='Actual Test Data', color='orange', linewidth=1.5)\n",
-    "plt.plot(test.index, test['Predicted'], label='Predicted Data', color='green', linewidth=1.5)\n",
-    "\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('Value')\n",
-    "plt.title('SARIMA ModelsForecast vs Actual - Unemployment Rate (%)')\n",
-    "plt.legend()\n",
-    "plt.tight_layout()  \n",
-    "plt.show()\n",
-    "```\n",
-    "\n",
-    "### Model Evaluation\n",
-    "```\n",
-    "# Calculate Mean Squared Error (MSE)\n",
-    "mse = mean_squared_error(test['median_unemployment'], test['Predicted'])\n",
-    "print(f'Mean Squared Error (MSE): {mse}')\n",
-    "\n",
-    "# Calculate Root Mean Squared Error (RMSE)\n",
-    "rmse = np.sqrt(mse)\n",
-    "print(f'Root Mean Squared Error (RMSE): {rmse}')\n",
-    "\n",
-    "# Calculate Mean Absolute Error (MAE)\n",
-    "mae = mean_absolute_error(test['median_unemployment'], test['Predicted'])\n",
-    "print(f'Mean Absolute Error (MAE): {mae}')\n",
-    "\n",
-    "# Calculate Mean Absolute Percentage Error (MAPE)\n",
-    "epsilon = 1e-10  # To avoid division by zero\n",
-    "filtered_test_data = test[test['median_unemployment'] > epsilon]  # Filter out values near zero\n",
-    "filtered_actual = filtered_test_data['median_unemployment']\n",
-    "filtered_predicted = filtered_test_data['Predicted']\n",
-    "\n",
-    "if len(filtered_actual) > 0:\n",
-    "    mape = np.mean(np.abs((filtered_actual - filtered_predicted) / (filtered_actual + epsilon))) * 100\n",
-    "else:\n",
-    "    mape = np.nan\n",
-    "\n",
-    "print(f'Mean Absolute Percentage Error (MAPE): {mape}')\n",
-    "\n",
-    "# Plot residuals\n",
-    "residuals = model_fit.resid  # Residuals from SARIMA model fit\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.plot(residuals, label='Residuals', color='blue')\n",
-    "plt.axhline(0, linestyle='--', color='red', linewidth=1)\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('Residual')\n",
-    "plt.title('Residual Plot')\n",
-    "plt.legend()\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "# Q-Q plot for normality check\n",
-    "stats.probplot(residuals, dist=\"norm\", plot=plt)\n",
-    "plt.title(\"Q-Q Plot of Residuals\")\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
-    "```"
    ]
   }
  ],
