--- a/statistical analysis/ARIMA/ARIMA  (unemployment).ipynb
+++ b/statistical analysis/ARIMA/ARIMA  (unemployment).ipynb
@@ -67,27 +67,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of the dataset: (349920, 13)\n",
-      "Unnamed: 0              int64\n",
-      "ref_date               object\n",
-      "geo                    object\n",
-      "labour_force           object\n",
-      "industry               object\n",
-      "sex                    object\n",
-      "age_group              object\n",
-      "value_unemployment    float64\n",
-      "wages                  object\n",
-      "value_wage            float64\n",
-      "year                    int64\n",
-      "month                   int64\n",
-      "ref_date_numeric      float64\n",
+      "Shape of the dataset: (349920, 14)\n",
+      "ref_date                   object\n",
+      "geo                        object\n",
+      "labour_force               object\n",
+      "industry                   object\n",
+      "sex                        object\n",
+      "age_group                  object\n",
+      "value_unemployment        float64\n",
+      "wages                      object\n",
+      "value_wage                float64\n",
+      "year                        int64\n",
+      "month                       int64\n",
+      "ref_date_numeric          float64\n",
+      "value_unemployment_log    float64\n",
+      "value_wage_log            float64\n",
       "dtype: object\n"
      ]
     }
@@ -719,8 +720,8 @@
       "===============================================================================\n",
       "Dep. Variable:     median_unemployment   No. Observations:                  288\n",
       "Model:                  ARIMA(1, 0, 0)   Log Likelihood                -450.804\n",
-      "Date:                 Sat, 16 Nov 2024   AIC                            907.608\n",
-      "Time:                         23:53:10   BIC                            918.597\n",
+      "Date:                 Mon, 18 Nov 2024   AIC                            907.608\n",
+      "Time:                         23:07:08   BIC                            918.597\n",
       "Sample:                     01-01-1997   HQIC                           912.011\n",
       "                          - 12-01-2020                                         \n",
       "Covariance Type:                   opg                                         \n",
@@ -764,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
